# claude-agent-sdk-python

./: .ai-reviewer.yml  .env.ai-pr-reviewer  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Claude_Agent_SDK_Complete_Guide.ipynb  Dockerfile.test  FALLBACK_MODEL_IMPLEMENTATION.md  K8S_HEALTHCHECK_STRATEGY.md  PROPOSAL_O2_STRUCTURAL_PROMOTION.md  README.md  RELEASING.md  SECURITY_FIX_SUMMARY.md  TESTING.md  VALIDATION_RESULTS.md  intercept-claude.js  pyproject.toml  test-structured-outputs.sh
.beads/: metadata.json
.claude/: CLAUDE.md  settings.json
ai_pr_reviewer/: __init__.py  __main__.py  config.py  server.py
e2e-tests/: README.md  test_agents_and_settings.py  test_hook_events.py  test_include_partial_messages.py  test_message_fields.py  test_new_hooks.py  test_sdk_mcp_tools.py  test_structured_output.py  test_telemetry.py  test_tool_permissions.py
examples/: agents.py  completion_receipt.py  deferred_tool_use.py  external_mcp_tensorfeed.py  fastapi_example.py  hooks.py  include_partial_messages.py  mcp_calculator.py  mcp_discover_available_tools.py  mlflow_gateway.py  plugin_example.py  quick_start.py  safety_guardrails.py  session_monitor.py  session_storage_cached.py  session_storage_example.py  streaming_mode.py  synap_memory.py  (+8 more)
tasks/ai_pr_reviewer/: __init__.py  claude_integration.py  config.py  error_handler.py  github_auth.py  github_review.py  inline_comments.py  main.py  pr_context.py  prompt_builder.py  pyproject.toml  queue_worker.py  review_queue.py  review_summary.py  review_tracker.py  reviewer_config.py  trigger_detection.py  webhook.py
(+178 files in other folders)
